opam-version: "2.0"
maintainer:   "anil@recoil.org"
homepage:     "https://github.com/mirage/mirage-tcpip"
dev-repo:     "git+https://github.com/mirage/mirage-tcpip.git"
bug-reports:  "https://github.com/mirage/mirage-tcpip/issues"
doc:          "https://mirage.github.io/mirage-tcpip/"
authors: [
  "Anil Madhavapeddy" "Balraj Singh" "Richard Mortier" "Nicolas Ojeda Bar"
  "Thomas Gazagnaire" "Vincent Bernardoff" "Magnus Skjegstad" "Mindy Preston"
  "Thomas Leonard" "David Scott" "Gabor Pali" "Hannes Mehnert" "Haris Rotsos"
  "Kia" "Luke Dunstan" "Pablo Polvorin" "Tim Cuthbertson" "lnmx" "pqwy" ]
license: "ISC"
tags: ["org:mirage"]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune"     {build & >= "1.7"}
  "configurator" {build}
  "ocaml" {>= "4.03.0"}
  "cstruct" {>= "3.0.2"}
]
depopts: [
  "mirage-xen-ocaml" {>= "3.1.0"}
]
synopsis: "Checksum functions for TCP/IP"
description: """
Virtual library tcpip-checksum with three implementations:
tcpip-checksum.ocaml: pure OCaml
tcpip-checksum.unix: Unix native version
tcpip-checksum.xen: Xen native version
"""
